// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas con el gifExpertApp Debe de mathchear con el snapshot 1`] = `
<Fragment>
  <h1
    className="title animate__animated animate__lightSpeedInRight"
  >
    Gifs to you
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas con el gifExpertApp Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h1
    className="title animate__animated animate__lightSpeedInRight"
  >
    Gifs to you
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="The office"
      key="The office"
    />
    <GifGrid
      category="Friends"
      key="Friends"
    />
  </ol>
</Fragment>
`;
